[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_3.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Blobs/Blob Standing Layer/Layer 1_sprite_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Blobs/Blob Moving/l0_sprite_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Blobs/Blob Moving/l0_sprite_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Blobs/Blob Standing Layer/Layer 1_sprite_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Blobs/Blob Standing Layer/Layer 1_sprite_4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Blobs/Blob Standing Layer/Layer 1_sprite_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/body/l0_sprite_5.png" type="Texture" id=18]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_5.png" type="Texture" id=19]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_6.png" type="Texture" id=20]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_7.png" type="Texture" id=21]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Abilities/Blink ability/Animation/hat/l1_sprite_4.png" type="Texture" id=25]
[ext_resource path="res://FullBodyCollision.gd" type="Script" id=26]
[ext_resource path="res://Assets/Blobs/Blob Hat/Moving/l1_sprite_1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Blobs/Blob Hat/Moving/l1_sprite_2.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "disappear",
"speed": 18.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "standing",
"speed": 3.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "appear",
"speed": 18.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "disappear",
"speed": 18.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "standing",
"speed": 3.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 24 ) ],
"loop": true,
"name": "appear",
"speed": 18.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 46.1751

[sub_resource type="CapsuleShape2D" id=4]
radius = 25.0733
height = 41.7021

[node name="Player" type="KinematicBody2D"]
position = Vector2( 439.243, 259.007 )
script = ExtResource( 2 )

[node name="Ooze" type="AnimatedSprite" parent="."]
position = Vector2( -2.90491, -4.35382 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "standing"
speed_scale = 0.8
__meta__ = {
"_edit_group_": true
}

[node name="Hat" type="AnimatedSprite" parent="Ooze"]
frames = SubResource( 2 )
animation = "walk"
speed_scale = 0.8

[node name="FullBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2.41742, -1.83032 )
shape = SubResource( 3 )
script = ExtResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HalfBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2.66742, 18.1697 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[connection signal="animation_finished" from="Ooze" to="." method="_on_Ooze_animation_finished"]
